Fix settings button spacing on mobile

--- a/src/app/settings/components/monthly-distribution-fields-config/monthly-distribution-fields-config.component.scss
+++ b/src/app/settings/components/monthly-distribution-fields-config/monthly-distribution-fields-config.component.scss
@@ -3,6 +3,11 @@
 .MonthlyDistributionFieldsConfig {
   &-subheading {
     @include subheading-sm;
+
+    @include media-phone {
+      font-size: 16px;
+      font-weight: 500;
+    }
   }
 
   &-section + &-subheading {
