--- a/src/app/settings/components/settings-section/settings-section.component.scss
+++ b/src/app/settings/components/settings-section/settings-section.component.scss
@@ -12,10 +12,6 @@
   &-buttonHeading {
     display: none;
 
-    i-feather {
-      color: $color-subheading;
-    }
-
     @include media-phone {
       @include button-reset;
       color: $color-subheading;
@@ -23,7 +19,8 @@
       display: flex;
       align-items: center;
       width: 100%;
-      padding: $spacing-15 $spacing-10;
+      padding: $spacing-20 $spacing-10;
+      font-size: 16px;
     }
   }
 
@@ -34,6 +31,7 @@
 
   &-expandIcon {
     margin-left: auto;
+    color: $color-table-header;
   }
 
   &-content {
